[gd_scene load_steps=3 format=3 uid="uid://d3nnuvngrt6jp"]

[ext_resource type="Script" path="res://uppdrag.gd" id="1_cqx7k"]

[sub_resource type="GDScript" id="GDScript_mx2n1"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Uppdrag" type="Node2D"]
script = ExtResource("1_cqx7k")

[node name="Ladda" type="Button" parent="."]
offset_left = 118.0
offset_top = 411.0
offset_right = 304.0
offset_bottom = 465.0
text = "Föremål 1"

[node name="Ladda2" type="Button" parent="."]
offset_left = 486.0
offset_top = 407.0
offset_right = 672.0
offset_bottom = 461.0
text = "Föremål 2"

[node name="Ladda3" type="Button" parent="."]
offset_left = 832.0
offset_top = 406.0
offset_right = 1018.0
offset_bottom = 460.0
text = "Föremål 3"

[node name="Bält" type="Label" parent="."]
modulate = Color(1, 0.270588, 1, 1)
offset_left = 120.0
offset_top = 96.0
offset_right = 1027.0
offset_bottom = 152.0
text = "Bälte"
vertical_alignment = 1
autowrap_mode = 2
script = SubResource("GDScript_mx2n1")

[connection signal="pressed" from="Ladda" to="." method="_on_ladda_pressed"]
[connection signal="pressed" from="Ladda2" to="." method="_on_ladda_2_pressed"]
[connection signal="pressed" from="Ladda3" to="." method="_on_ladda_3_pressed"]
